@@ -1,8 +1,6 @@
 package ru.practicum.server.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -11,12 +9,13 @@ import java.time.LocalDateTime;
 
 import ru.practicum.dto.HitDto;
 import ru.practicum.dto.StatDto;
+import ru.practicum.server.exception.ValidationException;
 import ru.practicum.server.model.EndpointHit;
-import ru.practicum.server.model.ViewStats;
 import ru.practicum.server.repository.EndpointHitRepository;
 
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class StatServiceImpl implements StatService {
     private final EndpointHitRepository endpointHitRepository;
 
@@ -31,28 +30,27 @@ public class StatServiceImpl implements StatService {
                 .build();
 
         endpointHitRepository.save(endpointHit);
+        endpointHitRepository.flush();
     }
 
     @Override
-    @Transactional(readOnly = true)
     public List<StatDto> get(LocalDateTime start, LocalDateTime end, List<String> uris, Boolean unique) {
-        List<ViewStats> stats;
-
-        if (uris != null && !uris.isEmpty()) {
-            stats = unique ? endpointHitRepository.getUniqueStatsByUris(start, end, uris)
-                    : endpointHitRepository.getStatsByUris(start, end, uris);
-        } else {
-            stats = unique ? endpointHitRepository.getUniqueStats(start, end)
-                    : endpointHitRepository.getStats(start, end);
+        if (start.isAfter(end)) {
+            throw new ValidationException("Дата начала должна быть позже даты окончания");
         }
 
-        return stats.stream()
-                .map(stat -> StatDto.builder()
-                        .app(stat.getApp())
-                        .uri(stat.getUri())
-                        .hits(stat.getHits())
-                        .build())
-                .collect(Collectors.toList());
+        if (unique) {
+            return endpointHitRepository.findHitsUnique(start, end, uris).stream().map(x -> StatDto.builder()
+                    .app(x[0].toString())
+                    .uri(x[1].toString())
+                    .hits((Long) x[2]).build()).toList();
+        }
+
+        return endpointHitRepository.findHits(start, end, uris).stream().map(x -> StatDto.builder()
+                .app(x[0].toString())
+                .uri(x[1].toString())
+                .hits((Long) x[2]).build()).toList();
+
     }
 
 }
